Changed contact form flex-direction to try and fix safari mobile layout bug

--- a/_scss/2-base/_base.scss
+++ b/_scss/2-base/_base.scss
@@ -333,7 +333,7 @@ Contact
 
 #contact-form {
 	display: flex;
-	width: 100%;
+	flex-direction: column;
 	margin: auto;
 }
 
